bindings/rust/idax-sys/shim/idax_shim.h

/* ═══════════════════════════════════════════════════════════════════════════
 * Source parsers (ida::parser)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxParserParseOptions {
    int32_t input_kind;
    int discard_result;
    int define_base_macros;
    int suppress_warnings;
    int ignore_errors;
    int allow_redeclarations;
    int no_decorate;
    int assume_high_level;
    int lower_prototypes;
    int raw_argument_names;
    int relaxed_namespaces;
    int exclude_base_types;
    int allow_missing_semicolon;
    int standalone_declaration;
    int allow_void;
    int no_mangle;
    size_t pack_alignment;
} IdaxParserParseOptions;
typedef struct IdaxParserParseReport {
    size_t error_count;
} IdaxParserParseReport;
int idax_parser_select(const char* name);
int idax_parser_select_for(uint32_t languages);
int idax_parser_selected_name(char** out);
int idax_parser_set_arguments(const char* parser_name, const char* arguments);
int idax_parser_parse_for(uint32_t languages, const char* input,
                          int32_t input_kind, IdaxParserParseReport* out);
int idax_parser_parse_with(const char* parser_name, const char* input,
                           int32_t input_kind, IdaxParserParseReport* out);
int idax_parser_parse_with_options(const char* parser_name, const char* input,
                                   const IdaxParserParseOptions* options,
                                   IdaxParserParseReport* out);
int idax_parser_option(const char* parser_name, const char* option_name,
                       char** out);
int idax_parser_set_option(const char* parser_name, const char* option_name,
                           const char* value);
/* ═══════════════════════════════════════════════════════════════════════════
 * Standard database directory trees (ida::directory)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxDirectoryEntry {
    char* path;
    char* name;
    char* display_name;
    char* attributes;
    int entry_kind;
} IdaxDirectoryEntry;
typedef struct IdaxDirectoryBulkFailure {
    size_t input_index;
    char* path;
    int operation_error;
    char* message;
} IdaxDirectoryBulkFailure;
typedef struct IdaxDirectoryBulkReport {
    char** affected_paths;
    size_t affected_paths_count;
    IdaxDirectoryBulkFailure* failures;
    size_t failures_count;
} IdaxDirectoryBulkReport;
int idax_directory_open(int kind);
int idax_directory_is_orderable(int kind, int* out);
int idax_directory_current_directory(int kind, char** out);
int idax_directory_change_directory(int kind, const char* path);
int idax_directory_absolute_path(int kind, const char* path, char** out);
int idax_directory_contains(int kind, const char* path, int* out);
int idax_directory_entry(int kind, const char* path, IdaxDirectoryEntry* out);
void idax_directory_entry_free(IdaxDirectoryEntry* entry);
int idax_directory_children(int kind, const char* path,
                            IdaxDirectoryEntry** out, size_t* count);